package replay

import (
	"context"
	"fmt"
	"log"
	"time"

	"github.com/annel0/mmo-game/internal/protocol/events"
	"google.golang.org/protobuf/types/known/timestamppb"
)

// MockReplayService —É–ø—Ä–æ—â–µ–Ω–Ω–∞—è —Ä–µ–∞–ª–∏–∑–∞—Ü–∏—è –¥–ª—è –¥–µ–º–æ–Ω—Å—Ç—Ä–∞—Ü–∏–∏
type MockReplayService struct {
	events []*events.EventEnvelope
}

// NewMockReplayService —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤—ã–π mock —Å–µ—Ä–≤–∏—Å
func NewMockReplayService() *MockReplayService {
	service := &MockReplayService{
		events: make([]*events.EventEnvelope, 0),
	}

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–µ—Å—Ç–æ–≤—ã–µ —Å–æ–±—ã—Ç–∏—è
	service.addSampleEvents()

	return service
}

// AddEvent –¥–æ–±–∞–≤–ª—è–µ—Ç —Å–æ–±—ã—Ç–∏–µ –≤ mock —Ö—Ä–∞–Ω–∏–ª–∏—â–µ
func (s *MockReplayService) AddEvent(event *events.EventEnvelope) {
	s.events = append(s.events, event)
	log.Printf("üìù Added event: %s (%s)", event.EventType, event.EventId)
}

// QueryEvents –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Å–æ–±—ã—Ç–∏—è –ø–æ —Ñ–∏–ª—å—Ç—Ä–∞–º (—É–ø—Ä–æ—â–µ–Ω–Ω–∞—è –≤–µ—Ä—Å–∏—è)
func (s *MockReplayService) QueryEvents(ctx context.Context, eventTypes []string, regionIDs []string, limit int32) ([]*events.EventEnvelope, error) {
	log.Printf("üîç Query events: types=%v, regions=%v, limit=%d", eventTypes, regionIDs, limit)

	result := make([]*events.EventEnvelope, 0)
	count := int32(0)

	for _, event := range s.events {
		// –ü—Ä–æ–≤–µ—Ä—è–µ–º –ª–∏–º–∏—Ç
		if limit > 0 && count >= limit {
			break
		}

		// –§–∏–ª—å—Ç—Ä –ø–æ —Ç–∏–ø–∞–º —Å–æ–±—ã—Ç–∏–π
		if len(eventTypes) > 0 {
			found := false
			for _, eventType := range eventTypes {
				if event.EventType == eventType {
					found = true
					break
				}
			}
			if !found {
				continue
			}
		}

		// –§–∏–ª—å—Ç—Ä –ø–æ —Ä–µ–≥–∏–æ–Ω–∞–º
		if len(regionIDs) > 0 {
			found := false
			for _, regionID := range regionIDs {
				if event.RegionId == regionID {
					found = true
					break
				}
			}
			if !found {
				continue
			}
		}

		result = append(result, event)
		count++
	}

	log.Printf("‚úÖ Found %d events", len(result))
	return result, nil
}

// GetEventStats –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É —Å–æ–±—ã—Ç–∏–π
func (s *MockReplayService) GetEventStats(ctx context.Context) (map[string]int64, error) {
	stats := make(map[string]int64)

	for _, event := range s.events {
		stats[event.EventType]++
	}

	log.Printf("üìä Event stats: %v", stats)
	return stats, nil
}

// GetEventTypes –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç –¥–æ—Å—Ç—É–ø–Ω—ã–µ —Ç–∏–ø—ã —Å–æ–±—ã—Ç–∏–π
func (s *MockReplayService) GetEventTypes(ctx context.Context) ([]string, error) {
	typeSet := make(map[string]bool)

	for _, event := range s.events {
		typeSet[event.EventType] = true
	}

	types := make([]string, 0, len(typeSet))
	for eventType := range typeSet {
		types = append(types, eventType)
	}

	log.Printf("üìã Available types: %v", types)
	return types, nil
}

// addSampleEvents –¥–æ–±–∞–≤–ª—è–µ—Ç —Ç–µ—Å—Ç–æ–≤—ã–µ —Å–æ–±—ã—Ç–∏—è
func (s *MockReplayService) addSampleEvents() {
	now := time.Now()

	// –°–∏—Å—Ç–µ–º–Ω–æ–µ —Å–æ–±—ã—Ç–∏–µ - –∑–∞–ø—É—Å–∫ —Å–µ—Ä–≤–∏—Å–∞
	s.events = append(s.events, &events.EventEnvelope{
		EventId:       "evt-001",
		EventType:     "SystemEvent",
		Timestamp:     timestamppb.New(now.Add(-10 * time.Minute)),
		RegionId:      "eu-west-1",
		SourceNode:    "node-001",
		SchemaVersion: 1,
		Event: &events.EventEnvelope_SystemEvent{
			SystemEvent: &events.SystemEvent{
				Component: "game-server",
				Level:     "info",
				SystemAction: &events.SystemEvent_ServiceStarted{
					ServiceStarted: &events.SystemEvent_ServiceStarted{
						ServiceName: "mmo-game-server",
						Version:     "v1.0.0",
						Config: map[string]string{
							"region": "eu-west-1",
							"port":   "7777",
						},
					},
				},
			},
		},
	})

	// –°–æ–±—ã—Ç–∏–µ –º–∏—Ä–∞ - –∑–∞–≥—Ä—É–∑–∫–∞ —á–∞–Ω–∫–∞
	s.events = append(s.events, &events.EventEnvelope{
		EventId:       "evt-002",
		EventType:     "WorldEvent",
		Timestamp:     timestamppb.New(now.Add(-8 * time.Minute)),
		RegionId:      "eu-west-1",
		SourceNode:    "node-001",
		SchemaVersion: 1,
		Event: &events.EventEnvelope_WorldEvent{
			WorldEvent: &events.WorldEvent{
				WorldId: "world-001",
				WorldAction: &events.WorldEvent_ChunkLoaded{
					ChunkLoaded: &events.WorldEvent_ChunkLoaded{
						Coords: &events.ChunkCoords{
							X: 0,
							Y: 0,
						},
						BlockCount: 256,
					},
				},
			},
		},
	})

	// –°–æ–±—ã—Ç–∏–µ –±–ª–æ–∫–∞ - —Ä–∞–∑–º–µ—â–µ–Ω–∏–µ –±–ª–æ–∫–∞
	s.events = append(s.events, &events.EventEnvelope{
		EventId:       "evt-003",
		EventType:     "BlockEvent",
		Timestamp:     timestamppb.New(now.Add(-5 * time.Minute)),
		RegionId:      "eu-west-1",
		SourceNode:    "node-001",
		SchemaVersion: 1,
		Event: &events.EventEnvelope_BlockEvent{
			BlockEvent: &events.BlockEvent{
				Coords: &events.BlockCoords{
					X: 10,
					Y: 20,
					Z: 1,
				},
				PlayerId: "player-123",
				BlockAction: &events.BlockEvent_BlockPlaced{
					BlockPlaced: &events.BlockEvent_BlockPlaced{
						BlockType: "stone",
						Layer:     "active",
						Metadata: map[string]string{
							"durability": "100",
							"placed_by":  "player-123",
						},
					},
				},
			},
		},
	})

	// –°–æ–±—ã—Ç–∏–µ —á–∞—Ç–∞
	s.events = append(s.events, &events.EventEnvelope{
		EventId:       "evt-004",
		EventType:     "ChatEvent",
		Timestamp:     timestamppb.New(now.Add(-2 * time.Minute)),
		RegionId:      "eu-west-1",
		SourceNode:    "node-001",
		SchemaVersion: 1,
		Event: &events.EventEnvelope_ChatEvent{
			ChatEvent: &events.ChatEvent{
				PlayerId: "player-123",
				Channel:  "global",
				ChatAction: &events.ChatEvent_MessageSent{
					MessageSent: &events.ChatEvent_MessageSent{
						Message:     "Hello, world!",
						MessageType: "public",
					},
				},
			},
		},
	})

	log.Printf("‚úÖ Added %d sample events", len(s.events))
}

// PrintAllEvents –≤—ã–≤–æ–¥–∏—Ç –≤—Å–µ —Å–æ–±—ã—Ç–∏—è –¥–ª—è –æ—Ç–ª–∞–¥–∫–∏
func (s *MockReplayService) PrintAllEvents() {
	fmt.Println("üìã All events in store:")
	for i, event := range s.events {
		timestamp := event.Timestamp.AsTime().Format("15:04:05")
		fmt.Printf("%d. [%s] %s/%s [%s] %s\n",
			i+1, timestamp, event.RegionId, event.SourceNode,
			event.EventType, event.EventId)
	}
}
